--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 body{
   font-family: 'Acme', sans-serif;
 }
@@ -39,45 +38,6 @@ body{
 #otherpage{
   color: red;
 }
-=======
-body{
-  font-family: 'Acme', sans-serif;
+.page-header{
+  color: blue;
 }
-
-#Title{
-  text-align: center;
-  margin-top: 60px;
-  font-size: 60px;
-  margin-bottom: 30px;
-  font-family: 'Acme', sans-serif;
-}
-
-#Poster{
-  margin-top: 50px
-}
-
-#PosterTitle{
-  text-align:left;
-  font-family: 'Acme', sans-serif;
-}
-
-#PongIntroduction{
-  text-align: left;
-}
-
-#Introduction{
-  font-size: 20px;
-}
-#pongcapture{
-  margin-top: 30px;
-  margin-left: 20px;
-}
-#Figure{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-#otherpage{
-  color: red;
-}
->>>>>>> 8445b10e3c38ee83b0054c1ee5b097fc90c25343
